@@ -1,3 +1,9 @@
+2014-01-13  James Hunt  <james.hunt@ubuntu.com>
+
+	* configure.ac: Check for numa.h.
+	* src/procenv.c: Allow building on Linux systems whose
+	  architectures are not NUMA-capable.
+
 2014-01-10  James Hunt  <james.hunt@ubuntu.com>
 
 	* man/procenv.1: Updated dates.
